@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2024 Google, Inc. and others.
+ * Copyright (c) 2011, 2025 Google, Inc. and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -82,6 +82,6 @@ public class TableWrapLayoutSupport extends AbstractSupport {
 	 * Create new {@link TableWrapData}.
 	 */
 	public static Object createTableWrapData() throws Exception {
-		return loadClass("org.eclipse.ui.forms.widgets.TableWrapData").newInstance();
+		return loadClass("org.eclipse.ui.forms.widgets.TableWrapData").getDeclaredConstructor().newInstance();
 	}
 }
