@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2024 Google, Inc.
+ * Copyright (c) 2011, 2025 Google, Inc. and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -36,7 +36,7 @@ public final class JavaBeanEditorProvider extends PropertyEditorProvider {
 	public PropertyEditor getEditorForEditorType(Class<?> editorType) throws Exception {
 		if (java.beans.PropertyEditor.class.isAssignableFrom(editorType)) {
 			try {
-				return createEditor((java.beans.PropertyEditor) editorType.newInstance());
+				return createEditor((java.beans.PropertyEditor) editorType.getDeclaredConstructor().newInstance());
 			} catch (Throwable e) {
 				// silently ignore any errors, as Introspector does
 			}
